apps/goatlint/src/snapshots/fixtures__cli__nested_config_-A no-console --config oxlint-no-console.json@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -A no-console --config goatlint-no-console.json
working directory: fixtures/cli/nested_config
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 8 files with 0 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
