apps/goatlint/src/snapshots/fixtures__cli__nested_config_-A no-console@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -A no-console
working directory: fixtures/cli/nested_config
----------

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[package2-no-config/debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 0 warnings and 2 errors.
Finished in <variable>ms on 14 files using 1 threads.
----------
CLI result: LintFoundErrors
----------
