apps/goatlint/src/snapshots/fixtures__cli__nested_config_package3-deep-config@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: package3-deep-config
working directory: fixtures/cli/nested_config
----------

  x eslint(no-console): Unexpected console statement.
   ,-[package3-deep-config/src/components/component.js:2:3]
 1 | export function Component() {
 2 |   console.log("hello");
   :   ^^^^^^^^^^^
 3 | }
   `----
  help: Delete this console statement.

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file using 1 threads.
----------
CLI result: LintFoundErrors
----------
