apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=checkstyle ok.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=checkstyle ok.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
<?xml version="1.0" encoding="utf-8"?><checkstyle version="4.3"></checkstyle>
----------
CLI result: LintSucceeded
----------
